# quick_ds

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  main.py  mkdocs.yml  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
data/01_raw/: raw_data.csv
data/02_intermediate/: preprocessed_companies.parquet  preprocessed_shuttles.parquet
data/03_primary/: model_input_table.parquet
data/06_models/regressor.pickle/2026-01-06T04.33.31.080Z/: regressor.pickle
data/08_reporting/shuttle_passenger_capacity_plot_exp.json/2026-01-06T04.33.31.080Z/: shuttle_passenger_capacity_plot_exp.json
data/08_reporting/shuttle_passenger_capacity_plot_go.json/2026-01-06T04.33.31.080Z/: shuttle_passenger_capacity_plot_go.json
docker/: docker-compose.yml
docs/: api.md  index.md
notebooks/: Tutorial - Binary Classification.ipynb
src/quick_ds/: __init__.py  cli.py
src/quick_ds/apps/api/: main.py
src/quick_ds/apps/ui/: .gitignore  main.py  main_tgb.py  rxconfig.py
src/quick_ds/apps/ui/apps/: apps.py
src/quick_ds/configs/: feature_engineering.yaml  training_rf.yaml  training_rfc.yaml  training_rfr.yaml  training_sgdc.yaml  training_sgdr.yaml
src/quick_ds/pipelines/: __init__.py  deployment.py  dnn_training.py  feature_engineering.py  inference.py  training.py
src/quick_ds/steps/: __init__.py  data_loader.py  data_preprocessor.py  data_saver.py  data_splitter.py  deployment.py  dnn_model_trainer.py  inference_predict.py  inference_preprocessor.py  model_evaluator.py  model_promoter.py  model_trainer.py
src/quick_ds/utils/: preprocess.py
src/quick_ds/zen_pipelines/: run.py
tests/: test_package.py
