[build-system]
requires = ["uv_build>=0.7.19"]
build-backend = "uv_build"


[project]
name = "quick_ds"
version = "0.1.0"
authors = [
  { name = "Imran Fadhil", email = "imranfadhil@gmail.com" },
]
description = "A framework for quick DS PoC."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10, <3.12"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115.8",
    "marshmallow==3.23.2",
    "notebook>=7.5.1",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "pip>=25.3",
    "pyarrow>=10.0.1",
    "pycaret>=2.2.2",
    "scikit-learn==1.6.1",
    "taipy>=3.0.0",
    "uvicorn>=0.40.0",
    "zenml[local]>=0.93.0",
]

[project.urls]
Homepage = "y"
"Bug Tracker" = "y/issues"
Discussions = "y/discussions"
Changelog = "y/releases"

[project.optional-dependencies]
dnn = [
    "lightning>=2.6.0",
    "torchmetrics>=1.8.2",
]


[dependency-groups]
test = [
  "pytest >=9",
  "pytest-cov >=7",
]
dev = [
  { include-group = "test" },
]
docs = [
    "markdown>=3.9",
    "mdx-include>=1.4.2",
    "mkdocs-material>=9.1.19",
    "mkdocs>=1.1.2",
    "mkdocstrings-python>=1.18.2",
    "pyyaml>=6.0.1",
]


[tool.pytest]
minversion = "9.0"
addopts = ["-ra", "--showlocals"]
strict = true
filterwarnings = [
  "error",
]
log_level = "INFO"
testpaths = [
  "tests",
]


[tool.coverage]
run.source = ["quick_ds"]
report.exclude_also = [
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

[tool.mypy]
files = ["src", "tests"]
python_version = "3.10"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "quick_ds.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true


[tool.ruff]

[tool.ruff.lint]
extend-select = [
  "ARG",    # flake8-unused-arguments
  "B",      # flake8-bugbear
  "BLE",    # flake8-blind-except
  "C4",     # flake8-comprehensions
  "DTZ",    # flake8-datetimez
  "EM",     # flake8-errmsg
  "EXE",    # flake8-executable
  "FA",     # flake8-future-annotations
  "FLY",    # flynt
  "FURB",   # refurb
  "G",      # flake8-logging-format
  "I",      # isort
  "ICN",    # flake8-import-conventions
  "ISC",    # flake8-implicit-str-concat
  "LOG",    # flake8-logging
  "NPY",    # NumPy specific rules
  "PD",     # pandas-vet
  "PERF",   # perflint
  "PGH",    # pygrep-hooks
  "PIE",    # flake8-pie
  "PL",     # pylint
  "PT",     # flake8-pytest-style
  "PTH",    # flake8-use-pathlib
  "PYI",    # flake8-pyi
  "Q",      # flake8-quotes
  "RET",    # flake8-return
  "RSE",    # flake8-raise
  "RUF",    # Ruff-specific
  "SIM",    # flake8-simplify
  "SLOT",   # flake8-slots
  "T10",    # flake8-debugger
  "T20",    # flake8-print
  "TC",     # flake8-type-checking
  "TRY",    # tryceratops
  "UP",     # pyupgrade
  "YTT",    # flake8-2020
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
]
# Uncomment if using a _compat.typing backport
# typing-modules = ["quick_ds._compat.typing"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]
"docs/examples/**" = ["T20"]


[tool.pylint]
py-version = "3.10"
ignore-paths = [".*/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "missing-function-docstring",
  "wrong-import-position",
]
